feat: add Farms management endpoint
